# Reduced_order_model_crocoddyl

./: .gitignore  .gitmodules  ActuationModelBipedContactVertex.py  BipedContacVertexClass.py  CMakeLists.txt  ContactVertexClass.py  ContactVertexClass_backup.py  README.md  ResidualAsymmetricFrictionConeClass.py  ResidualControlBoundClass.py  frames.gv  test_frictionCone.py  trajectory_publisher.py  unitTest.py  util.py  variable_height_analytical_3D_CoP_VertexPoint_CombinedFriction.py
SRBM_Ke/script/: ActionModel_Centroidal.py  centroidal_model.py  utils.py
SRBM_Thomas/: exemple.py  readme.md  utils.py
SRBM_Thomas/crocoddyl_class/: ActionModel.py  ActionModel_nl.py  GaitProblem.py
Variable_Height_Crocoddyl/scripts/: LIPM.py  ResidualAsymmetricFrictionConeClass.py  ResidualControlBoundClass.py  ResidualControlClass.py  crocoddyl_data.npz  trajectory_publisher.py  unitTest.py  util.py  variable_height_analytical.py  variable_height_analytical_3D_CoP.py  variable_height_analytical_3D_CoP_VertexPoint.py  variable_height_analytical_3D_CoP_VertexPoint_CombinedFriction.py
backup/: ContactVertexClass_backup.py  LIPM.py
examples/: CMakeLists.txt  talos_walk.py
python/: CMakeLists.txt
python/vhip/: __init__.py  asymmetric_cone.py  biped_vertex.py  util.py  vertex_control.py  vhip_model.py
